--- a/team.html
+++ b/team.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Sep 27 2020 04:46:50 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Oct 08 2020 06:50:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -16,72 +16,69 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
   <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
 </head>
-<body>
+<body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="menu_container"><a href="#" class="brand w-nav-brand"></a>
-      <nav role="navigation" class="w-nav-menu"><a href="index.html" class="w-nav-link">Home</a><a href="team.html" aria-current="page" class="w-nav-link w--current">Team</a><a href="services.html" class="w-nav-link">Services</a><a href="conditions-treated.html" class="w-nav-link">Conditions Treated</a><a href="testimonials.html" class="w-nav-link">Testimonials</a><a href="contact.html" class="w-nav-link">Contact</a></nav>
+    <div class="menu_container">
+      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav_link w-nav-link">Home</a><a href="team.html" aria-current="page" class="nav_link w-nav-link w--current">Team</a><a href="services.html" class="nav_link w-nav-link">Services</a><a href="conditions-treated.html" class="nav_link w-nav-link">Conditions Treated</a><a href="testimonials.html" class="nav_link w-nav-link">Testimonials</a><a href="contact.html" class="nav_link w-nav-link">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
     </div>
   </div>
-  <div class="main_container">
-    <h1 class="section_h2">Team (Practitioners, Our Team, Staff, About Us?)</h1>
-    <h2 class="section_h2">Dr. Jay Ryu, L.Ac., Ph.D</h2>
-    <h4 class="ryu_h4">Founder and chief practitioner of Ryu Acupuncture Clinic, Inc. He has been been providing world-class care to patients across Southern California for 23+ years with superior results. More info, more info, more info, more info, more info, more info.</h4>
-    <div class="_2_block_row">
-      <div class="_45_block">
-        <p>Ryu Acupuncture Clinic first opened in 1997 in Burbank, California.<br><br>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist.  He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine.<br><br>He serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology.  Dr. Ryu has also been a continuing education instructor for acupuncturists.<br><br>He is fluent in both English and Korean.  Dr. Ryu has glowing success in issues regarding infertility, allergies, asthma, facial rejuvenation, pain management, and female issues. </p>
+  <div class="our_team_section">
+    <div class="main_container">
+      <h1 class="section_h1">Meet Our Team</h1>
+      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <h2 class="section_h2">Dr. Jay Ryu, L.Ac., Ph.D</h2>
+      <h4 class="ryu_h4">Founder and chief practitioner of Ryu Acupuncture Clinic, Inc. He has been been providing world-class care to patients across Southern California for 23+ years with superior results. More info, more info, more info, more info, more info, more info.</h4>
+      <div class="_2_block_row">
+        <div class="_45_block margin_right">
+          <p class="paragraph-7">Ryu Acupuncture Clinic first opened in 1997 in Burbank, California.<br><br>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist.  He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine.<br><br>He serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology.  Dr. Ryu has also been a continuing education instructor for acupuncturists.<br><br>He is fluent in both English and Korean.  Dr. Ryu has glowing success in issues regarding infertility, allergies, asthma, facial rejuvenation, pain management, and female issues. </p>
+        </div>
+        <div class="_55_block margin_left"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 47vw, (max-width: 991px) 48vw, 53vw" alt=""></div>
       </div>
-      <div class="_55_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 45vw, (max-width: 767px) 48vw, 50vw" alt=""></div>
-    </div>
-    <div class="blue_divide"></div>
-    <div class="_2_block_row">
-      <div class="_35_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 32vw, (max-width: 767px) 33vw, 34vw" alt="" class="image"></div>
-      <div class="_65_block">
-        <h2 class="section_h2_left">Veronica Ryu, L.Ac.</h2>
-        <h4 class="ryu_h4">Specialties:</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <div class="blue_divide"></div>
+      <div class="_2_block_row margin_bottom">
+        <div class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 767px) 90vw, (max-width: 991px) 28vw, 32vw" alt="" class="image"></div>
+        <div class="_65_block margin_left">
+          <h2 class="section_h2_left">Veronica Ryu, L.Ac.</h2>
+          <h4 class="ryu_h4">Specialties:</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
       </div>
-    </div>
-    <div class="_2_block_row">
-      <div class="_35_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 32vw, (max-width: 767px) 33vw, 34vw" alt=""></div>
-      <div class="_65_block">
-        <h2 class="section_h2_left">Jennifer Ryu, L.Ac.</h2>
-        <h4 class="ryu_h4">Specialties:</h4>
-        <p class="paragraph-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <div class="_2_block_row margin_top">
+        <div class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 767px) 90vw, (max-width: 991px) 28vw, 32vw" alt=""></div>
+        <div class="_65_block margin_left">
+          <h2 class="section_h2_left">Jennifer Ryu, L.Ac.</h2>
+          <h4 class="ryu_h4">Specialties:</h4>
+          <p class="paragraph-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
       </div>
     </div>
   </div>
   <div class="footer_section">
     <div class="ends_container">
       <div class="_4_block_row">
-        <div class="_4_block">
-          <h3 class="footer_h3">RYU ACUPUNCTURE</h3>
-          <div class="w-layout-grid footer_grid_1_block">
-            <ul role="list" class="w-list-unstyled">
-              <li class="footer_link-2"></li>
-            </ul>
-          </div>
-        </div>
+        <div class="_4_block"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" alt="" class="image-2"></div>
         <div class="_4_block">
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
               <li class="footer_link"><a href="team.html" aria-current="page" class="link_white w--current">About</a></li>
               <li class="footer_link"><a href="services.html" class="link_white">Services</a></li>
+              <li class="footer_link"><a href="conditions-treated.html" class="link_white">Conditions Treated</a></li>
               <li class="footer_link"><a href="testimonials.html" class="link_white">Testimonials</a></li>
               <li class="footer_link"><a href="contact.html" class="link_white">Contact</a></li>
             </ul>
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link"><a href="index.html" class="link_white">Terms of Use</a></li>
-              <li class="footer_link"><a href="#" class="link_white">Privacy Policy</a></li>
+              <li class="footer_link"><a href="terms-of-use.html" class="link_white">Terms of Use</a></li>
+              <li class="footer_link"><a href="privacy.html" class="link_white">Privacy Policy</a></li>
               <li class="footer_link"><a href="#" class="link_white">Site Map</a></li>
             </ul>
           </div>
@@ -89,26 +86,26 @@
         <div class="_4_block">
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_1_block">
-            <ul role="list" class="w-list-unstyled">
-              <li>Mon: 9:30AM - 6:00PM</li>
-              <li>Tue: 10:00AM - 2:00PM</li>
-              <li>Wed: 9:30AM - 6:00PM</li>
-              <li>Thu: 10:00AM - 2:00PM</li>
-              <li>Fri: 9:30AM - 6:00PM</li>
-              <li>Sat: 9:00AM - 2:00PM</li>
-              <li>Sun: Closed</li>
+            <ul role="list" class="list w-list-unstyled">
+              <li class="list-item">Mon: 9:30AM - 6:00PM</li>
+              <li class="list-item-2">Tue: Closed</li>
+              <li class="list-item-3">Wed: 9:30AM - 6:00PM</li>
+              <li class="list-item-8">Thu: Closed</li>
+              <li class="list-item-9">Fri: 9:30AM - 6:00PM</li>
+              <li class="list-item-10">Sat: 9:00AM - 1:30PM</li>
+              <li class="list-item-11">Sun: Closed</li>
             </ul>
           </div>
         </div>
         <div class="_4_block">
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
-            <ul role="list" class="w-list-unstyled">
-              <li><a href="#" class="footer_link">3808 W. Riverside Dr. - Suite 510</a></li>
-              <li>Burbank, CA 91505</li>
-              <li>Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
-              <li>Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a></li>
-              <li>Fax: <a href="tel:8188419092" class="footer_link">(818) 841-9092</a></li>
+            <ul role="list" class="list-2 w-list-unstyled">
+              <li><a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="footer_link">3808 W. Riverside Dr. #510</a></li>
+              <li class="list-item-4">Burbank, CA 91505</li>
+              <li class="list-item-5">Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
+              <li class="list-item-6">Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a></li>
+              <li class="list-item-7">Fax: <a href="tel:8188419092" class="footer_link">(818) 841-9092</a></li>
               <li class="footer_link-2"><a href="mailto:ryuacupuncture@yahoo.com" class="footer_link">ryuacupuncture@yahoo.com</a></li>
               <li class="footer_list_item"><a href="https://www.facebook.com/pages/Ryu%20Acupuncture%20Clinic/110015192394728/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-inc-burbank" target="_blank" class="footer_link-2 footer_icon"></a><a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
             </ul>
