--- a/privacy.html
+++ b/privacy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Nov 06 2020 09:51:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 06 2020 13:22:34 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f75a0efe24b373e47ab1ed5" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -82,7 +82,7 @@
   </div>
   <div id="privacy_section_1" class="privacy_section_1">
     <div class="main_container">
-      <h2 class="legal_h2">1. WHAT INFORMATION DO WE COLLECT?</h2>
+      <h1 class="legal_h2">1. WHAT INFORMATION DO WE COLLECT?</h1>
       <h3 class="legal_h3"><strong>Personal information you disclose to us</strong></h3>
       <p><strong><em>In Short:  </em></strong><em>We collect personal information that you provide to us.</em><br><br>We collect personal information that you voluntarily provide to us when you express an interest in obtaining information about us or our products and Services, when you participate in activities on the Website or otherwise when you contact us.<br><br>The personal information that we collect depends on the context of your interactions with us and the Website, the choices you make and the products and features you use. The personal information we collect may include the following:<br><strong><br>Personal Information Provided by You.</strong> We collect names; phone numbers; email addresses; and other similar information.<br><br>All personal information that you provide to us must be true, complete and accurate, and you must notify us of any changes to such personal information.</p>
       <h3 class="legal_h3"><strong>Information automatically collected</strong></h3>
@@ -96,7 +96,7 @@
   </div>
   <div id="privacy_section_2" class="privacy_section_2">
     <div class="main_container">
-      <h2 class="legal_h2">2. HOW DO WE USE YOUR INFORMATION?</h2>
+      <h1 class="legal_h2">2. HOW DO WE USE YOUR INFORMATION?</h1>
       <p class="legal_para"><strong><em>In Short:  </em></strong><em>We process your information for purposes based on legitimate business interests, the fulfillment of our contract with you, compliance with our legal obligations, and/or your consent.<br>‍</em><br>We use personal information collected via our Website for a variety of business purposes described below. We process your personal information for these purposes in reliance on our legitimate business interests, in order to enter into or perform a contract with you, with your consent, and/or for compliance with our legal obligations. We indicate the specific processing grounds we rely on next to each purpose listed below.<br><br>We use the information we collect or receive:</p>
       <ul role="list" class="legal_list">
         <li><strong>To send administrative information to you. </strong>We may use your personal information to send you product, service and new feature information and/or information about changes to our terms, conditions, and policies.</li>
@@ -115,7 +115,7 @@
   </div>
   <div id="privacy_section_3" class="privacy_section_3">
     <div class="main_container">
-      <h2 class="legal_h2">3. WILL YOUR INFORMATION BE SHARED WITH ANYONE?</h2>
+      <h1 class="legal_h2">3. WILL YOUR INFORMATION BE SHARED WITH ANYONE?</h1>
       <p class="legal_para"><strong><em>In Short:</em></strong><em>  We only share information with your consent, to comply with laws, to provide you with services, to protect your rights, or to fulfill business obligations.<br>‍</em><br>We may process or share your data that we hold based on the following legal basis:</p>
       <ul role="list" class="legal_list">
         <li><strong>Consent:</strong> We may process your data if you have given us specific consent to use your personal information for a specific purpose.</li>
@@ -132,13 +132,13 @@
   </div>
   <div id="privacy_section_4" class="privacy_section_4">
     <div class="main_container">
-      <h2 class="legal_h2">4. DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</h2>
+      <h2 class="legal_h2">4. DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</h2>
       <p class="legal_para"><strong><em>In Short: </em></strong><em> We may use cookies and other tracking technologies to collect and store your information.<br>‍</em><br>We may use cookies and similar tracking technologies (like web beacons and pixels) to access or store information. Specific information about how we use such technologies and how you can refuse certain cookies is set out in our Cookie Notice.</p>
     </div>
   </div>
   <div id="privacy_section_5" class="privacy_section_5">
     <div class="main_container">
-      <h2 class="legal_h2">5. DO WE USE GOOGLE MAPS?</h2>
+      <h1 class="legal_h2">5. DO WE USE GOOGLE MAPS?</h1>
       <p class="legal_para"><strong><em>In Short:</em></strong><em>  Yes, we use Google Maps for the purpose of providing better service.</em><br><br>This Website uses Google Maps APIs which is subject to Google’s Terms of Service. You may find the Google Maps APIs Terms of Service <a href="https://developers.google.com/maps/terms" target="_blank" class="blue_link">here</a>. To find out more about Google’s Privacy Policy, please refer to this <a href="https://policies.google.com/privacy" target="_blank" class="blue_link">link</a>.</p>
     </div>
   </div>
@@ -147,49 +147,49 @@
   </div>
   <div id="privacy_section_7" class="privacy_section_7">
     <div class="main_container">
-      <h2 class="legal_h2">6. HOW LONG DO WE KEEP YOUR INFORMATION?</h2>
+      <h1 class="legal_h2">6. HOW LONG DO WE KEEP YOUR INFORMATION?</h1>
       <p class="legal_para"><strong><em>In Short: </em></strong><em> We keep your information for as long as necessary to fulfill the purposes outlined in this privacy notice unless otherwise required by law.</em><br><br>We will only keep your personal information for as long as it is necessary for the purposes set out in this privacy notice, unless a longer retention period is required or permitted by law (such as tax, accounting or other legal requirements). No purpose in this notice will require us keeping your personal information for longer than 1 year.<br><br>When we have no ongoing legitimate business need to process your personal information, we will either delete or anonymize such information, or, if this is not possible (for example, because your personal information has been stored in backup archives), then we will securely store your personal information and isolate it from any further processing until deletion is possible.</p>
     </div>
   </div>
   <div id="privacy_section_8" class="privacy_section_8">
     <div class="main_container">
-      <h2 class="legal_h2">7. HOW DO WE KEEP YOUR INFORMATION SAFE?</h2>
+      <h1 class="legal_h2">7. HOW DO WE KEEP YOUR INFORMATION SAFE?</h1>
       <p class="legal_para"><strong><em>In Short: </em></strong><em> We aim to protect your personal information through a system of organizational and technical security measures.</em><br><br>We have implemented appropriate technical and organizational security measures designed to protect the security of any personal information we process. However, despite our safeguards and efforts to secure your information, no electronic transmission over the Internet or information storage technology can be guaranteed to be 100% secure, so we cannot promise or guarantee that hackers, cybercriminals, or other unauthorized third parties will not be able to defeat our security, and improperly collect, access, steal, or modify your information. Although we will do our best to protect your personal information, transmission of personal information to and from our Website is at your own risk. You should only access the Website within a secure environment.</p>
     </div>
   </div>
   <div id="privacy_section_9" class="privacy_section_9">
     <div class="main_container">
-      <h2 class="legal_h2">8. DO WE COLLECT INFORMATION FROM MINORS?</h2>
+      <h1 class="legal_h2">8. DO WE COLLECT INFORMATION FROM MINORS?</h1>
       <p class="legal_para"><strong><em>In Short:</em></strong><em>  We do not knowingly collect data from or market to children under 18 years of age.</em><br><br>We do not knowingly solicit data from or market to children under 18 years of age. By using the Website, you represent that you are at least 18 or that you are the parent or guardian of such a minor and consent to such minor dependent’s use of the Website. If we learn that personal information from users less than 18 years of age has been collected, we will deactivate the account and take reasonable measures to promptly delete such data from our records. If you become aware of any data we may have collected from children under age 18, please contact us at <a href="mailto:ryuacupuncture@yahoo.com" target="_blank" class="blue_link">ryuacupuncture@yahoo.com</a>.</p>
     </div>
   </div>
   <div id="privacy_section_10" class="privacy_section_10">
     <div class="main_container">
-      <h2 class="legal_h2">9. WHAT ARE YOUR PRIVACY RIGHTS?</h2>
-      <p class="legal_para"><strong><em>In Short:</em></strong><em>  You may review, change, or terminate your account at any time.<br><br>‍</em>If you are a resident in the European Economic Area and you believe we are unlawfully processing your personal information, you also have the right to complain to your local data protection supervisory authority. You can find their contact details here: <a href="http://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm" target="_blank" class="blue_link">http://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm</a>.<br><br>If you are a resident in Switzerland, the contact details for the data protection authorities are available here: <a href="https://www.edoeb.admin.ch/edoeb/en/home.html" target="_blank" class="blue_link">https://www.edoeb.admin.ch/edoeb/en/home.html</a>.<br><strong><br>Cookies and similar technologies:</strong> Most Web browsers are set to accept cookies by default. If you prefer, you can usually choose to set your browser to remove cookies and to reject cookies. If you choose to remove cookies or reject cookies, this could affect certain features or services of our Website.</p>
+      <h1 class="legal_h2">9. WHAT ARE YOUR PRIVACY RIGHTS?</h1>
+      <p class="legal_para"><strong><em>In Short:</em></strong><em>  You may review, change, or terminate your account at any time.<br><br>‍</em>If you are a resident in the European Economic Area and you believe we are unlawfully processing your personal information, you also have the right to complain to your local data protection supervisory authority. You can find their contact details <a href="http://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm" class="blue_link">here</a>.<a href="#" class="blue_link"><br></a><br>If you are a resident in Switzerland, the contact details for the data protection authorities are available <a href="https://www.edoeb.admin.ch/edoeb/en/home.html" class="blue_link">here</a>.<br>‍<strong><br>Cookies and similar technologies:</strong> Most Web browsers are set to accept cookies by default. If you prefer, you can usually choose to set your browser to remove cookies and to reject cookies. If you choose to remove cookies or reject cookies, this could affect certain features or services of our Website.</p>
     </div>
   </div>
   <div id="privacy_section_11" class="privacy_section_11">
     <div class="main_container">
-      <h2 class="legal_h2">10. CONTROLS FOR DO-NOT-TRACK FEATURES</h2>
+      <h1 class="legal_h2">10. CONTROLS FOR DO-NOT-TRACK FEATURES</h1>
       <p class="legal_para">Most web browsers and some mobile operating systems and mobile applications include a Do-Not-Track (&quot;DNT&quot;) feature or setting you can activate to signal your privacy preference not to have data about your online browsing activities monitored and collected. At this stage no uniform technology standard for recognizing and implementing DNT signals has been finalized. As such, we do not currently respond to DNT browser signals or any other mechanism that automatically communicates your choice not to be tracked online. If a standard for online tracking is adopted that we must follow in the future, we will inform you about that practice in a revised version of this privacy notice.</p>
     </div>
   </div>
   <div id="privacy_section_12" class="privacy_section_12">
     <div class="main_container">
-      <h2 class="legal_h2">11. DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</h2>
+      <h1 class="legal_h2">11. DO CALIFORNIA RESIDENTS HAVE SPECIFIC RIGHTS?</h1>
       <p class="legal_para"><strong><em>In Short: </em></strong><em> Yes, if you are a resident of California, you are granted specific rights regarding access to your personal information.<br>‍</em><br>California Civil Code Section 1798.83, also known as the &quot;Shine The Light&quot; law, permits our users who are California residents to request and obtain from us, once a year and free of charge, information about categories of personal information (if any) we disclosed to third parties for direct marketing purposes and the names and addresses of all third parties with which we shared personal information in the immediately preceding calendar year. If you are a California resident and would like to make such a request, please submit your request in writing to us using the contact information provided below.<br>‍<br>If you are under 18 years of age, reside in California, and have a registered account with the Website, you have the right to request removal of unwanted data that you publicly post on the Website. To request removal of such data, please contact us using the contact information provided below, and include the email address associated with your account and a statement that you reside in California. We will make sure the data is not publicly displayed on the Website, but please be aware that the data may not be completely or comprehensively removed from all our systems (e.g. backups, etc.).</p>
     </div>
   </div>
   <div id="privacy_section_13" class="privacy_section_13">
     <div class="main_container">
-      <h2 class="legal_h2">12. DO WE MAKE UPDATES TO THIS NOTICE?</h2>
+      <h1 class="legal_h2">12. DO WE MAKE UPDATES TO THIS NOTICE?</h1>
       <p class="legal_para"><strong><em>In Short: </em></strong><em> Yes, we will update this notice as necessary to stay compliant with relevant laws.<br>‍</em><br>We may update this privacy notice from time to time. The updated version will be indicated by an updated &quot;Revised&quot; date and the updated version will be effective as soon as it is accessible. If we make material changes to this privacy notice, we may notify you either by prominently posting a notice of such changes or by directly sending you a notification. We encourage you to review this privacy notice frequently to be informed of how we are protecting your information.</p>
     </div>
   </div>
   <div id="privacy_section_14" class="privacy_section_14">
     <div class="main_container">
-      <h2 class="legal_h2">13. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</h2>
+      <h1 class="legal_h2">13. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</h1>
       <p class="legal_para">If you have questions or comments about this notice, you may email us at <a href="mailto:ryuacupuncture@yahoo.com" target="_blank" class="blue_link">ryuacupuncture@yahoo.com</a> or by post to:<br>‍<br>Ryu Acupuncture Clinic, Inc<br>3808 W. Riverside Dr., #510<br>Burbank, CA 91505<br>United States</p>
     </div>
   </div>
